<resources>
    <string name="app_name">MingHuaApp</string>

    <string name="navigation_home">首页</string>
    <string name="navigation_message">消息</string>
    <string name="navigation_search">探索</string>
    <string name="navigation_mine">我的</string>

    <string name="action_settings">Settings</string>
    <string name="activity_binding">绑定</string>
    <string name="activity_educational">教务在线</string>
    <string name="activity_setting">设置</string>
    <string name="activity_news_details">新闻详情</string>
    <string name="activity_announcement">校园公告</string>
    <string name="activity_grade">成绩</string>
    <string name="activity_schedule">课表</string>
    <string name="activity_news">校园资讯</string>
    <string name="activity_time">时间</string>
    <string name="activity_test">考试</string>
    <string name="activity_postTease">发布树洞</string>
    <string name="activity_postMarket">发布</string>
    <string name="activity_collection">我的收藏</string>
    <string name="activity_library">图书馆新闻</string>
    <string name="activity_focus">我的关注</string>
    <string name="activity_friend">我的好友</string>
    <string name="activity_buys">我的购买</string>
    <string name="activity_dynamic">我的发布</string>
    <string name="activity_nearby">附近的人</string>
    <string name="activity_calendar">2017-2018校历</string>

    <!-- login_first -->
    <string name="login_logo">登录之后更精彩</string>
    <string name="login_phone">手机登录</string>
    <string name="login_other">其他方式登录</string>
    <string name="login_register_text">登录代表你阅读并同意</string>
    <string name="login_treaty">《Somnus条约》</string>
    <string name="login_privacy">《隐私条约》</string>
    <string name="login_qq_binding">绑定手机号</string>
    <string name="login_code_get">获取验证码</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_area">+86</string>
    <string name="login_tag">未注册手机验证后自动登录</string>
    <string name="login_help">需要帮助</string>

    <!-- login_second -->
    <string name="login_username_logo">用户名(手机号)</string>
    <string name="login_password_logo">密码</string>
    <string name="login_password_hint">至少六位密码</string>
    <string name="login_password_forget">忘记密码?</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册/登录</string>

    <string name="login_password">密码登录</string>
    <string name="login_code">免密码登录</string>
    <string name="login_new_password">输入验证码以及新密码</string>
    <string name="new_password">请输入新密码</string>

    <!-- progress dialog -->
    <string name="dialog_progress_error_msg">错误信息：(%1$d) %2$s。</string>

    <!-- register -->
    <string name="register_phoneNum_logo">手机号</string>
    <string name="register_title">注册</string>
    <string name="register_phone">手机注册</string>
    <string name="register_agreement">服务协议</string>
    <string name="register_privacy">隐私条款</string>
    <string name="register_txt">注册即代表同意BomDa </string>
    <string name="register_and"> 和 </string>
    <string name="area_code">+86</string>
    <string name="register_next">下一步</string>
    <string name="register_code">输入验证码</string>
    <string name="register_send">短信已发送至</string>
    <string name="register_phoneNum">12345678911</string>
    <string name="register_timer">59s后可重发</string>

    <!-- ProgressBarDialog -->
    <string name="progressBarDialog_text">正在登录...</string>

    <!-- main_drawer -->
    <string name="main_drawer_situation">学校概况</string>
    <string name="main_drawer_grade">成绩</string>
    <string name="main_drawer_like">表白墙</string>
    <string name="main_drawer_service">服务</string>
    <string name="main_drawer_announcement">校园公告</string>
    <string name="main_drawer_calendar">校历</string>
    <string name="main_drawer_schedule">课表</string>
    <string name="main_drawer_evaluation">教学评价</string>
    <string name="main_drawer_life">微圈</string>
    <string name="main_drawer_news">资讯</string>
    <string name="main_drawer_time">考试</string>
    <string name="main_drawer_friends">我的好友</string>
    <string name="main_drawer_nearby">附近的人</string>
    <string name="main_drawer_Communicate">更多</string>
    <string name="main_drawer_library">图书馆</string>
    <string name="main_drawer_tool">设置</string>
    <string name="main_drawer_about">关于</string>
    <string name="main_drawer_exit">注销</string>
    <string name="mine_null">""</string>

    <!-- mine -->
    <string name="mine_nick">用户昵称</string>
    <string name="mine_location">海南海口</string>
    <string name="mine_dynamic">我的动态</string>
    <string name="mine_post">我的发布</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_focus">我的关注</string>
    <string name="mine_friends">我的好友</string>
    <string name="mine_buys">我的购买</string>
    <string name="mine_nearby">附近的人</string>
    <string name="mine_logout_title">登录更精彩</string>
    <string name="mine_login_txt">现在去登录</string>
    <string name="mine_num">0</string>
    <string name="mine_dynamic_title">动态</string>
    <string name="mine_love_title">获赞</string>
    <string name="mine_collection_title">收藏</string>
    <string name="mine_focus_title">关注</string>
    <string name="mine_look">查看或编辑个人主页</string>
    <string name="mine_setting">设置</string>
    <string name="mine_login_title">登录邦达，享受更好体验</string>

    <!-- activity_settings -->
    <string name="basic_settings">基本设置</string>
    <string name="notice_settings">通知设置</string>
    <string name="account_settings">账号设置</string>
    <string name="exit_settings">退出账号</string>
    <string name="about_help">关于与帮助</string>
    <string name="propaganda_settings">最终解释权归 BomDa 所有</string>
    <string name="All_rights_reserved">All rights reserved</string>
    <!-- basic_settings -->
    <string name="provincial_traffic">省流量模式</string>
    <string name="provincial_traffic_txt">仅在Wi-Fi环境下才会自动加载图片</string>
    <!-- font_size -->
    <string name="theme_kind">主题皮肤</string>
    <!-- Video_playback -->
    <string name="video_playback">视频自动播放</string>
    <string name="video_playback_txt">仅在Wi-Fi环境下视频自动播放</string>
    <!-- Night_pattern -->
    <string name="night_pattern">自动切换日夜间模式</string>
    <string name="night_pattern_on">开启</string>
    <string name="night_pattern_off">关闭</string>
    <!-- clear_cache -->
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_txt">包括图片、音频和视频缓存(共</string>
    <string name="cache_size">3.2MB</string>
    <string name="symbol">)</string>
    <!-- notifications -->
    <string name="notifications_new_message">新消息提醒</string>
    <string name="notice_prompt">提示音</string>
    <string name="notice_system">系统音效</string>
    <string name="notice_vibration">震动</string>
    <!-- account -->
    <string name="account_security">账号与安全</string>
    <string name="account_security_txt">管理账号安全、修改账号密码等</string>
    <string name="account_blacklist">黑名单</string>
    <string name="account_blacklist_txt">管理黑名单</string>
    <!-- about_help -->
    <string name="feedback">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_txt">当前版本</string>
    <string name="version">1.0</string>
    <string name="agreement">BomDa协议</string>

    <string name="announcement_title">关于成绩提交后，使用360浏览器不能正常打印输出的解决方法啊</string>
    <string name="announcement_hhh">hahahahahahahahhahahahah</string>
    <string name="announcement_unit">教务处</string>
    <string name="announcement_time">2016-05-10 10:34:12</string>
    <string name="announcement_term">2019-05-30</string>
    <string name="announcement_symbol_one">[</string>
    <string name="announcement_type">学校公告</string>
    <string name="announcement_symbol_two">]</string>
    <string name="source">来源:</string>
    <string name="time">时间:</string>

    <string name="home_search">搜索</string>

    <string name="readCount">阅读数:800</string>
    <string name="praise">喜欢</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="message">消息</string>
    <string name="message_list">通知列表</string>
    <string name="message_no_txt">还没有收到通知</string>
    <string name="direct">私信</string>
</resources>


